<resources>
    <string name="app_name">DCI Kotlin</string>
    <string name="username"><i>Username</i></string>
    <string name="password"><i>Password</i></string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="contentDescriptionForLogo">This is logo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="blank_edit_text">Must not be blanked</string>
    <string name="at_least_6_characters">At least 6 character</string>
    <string name="NULL" />
    <string name="home">Home</string>
    <string name="study_corner">Study corner</string>
    <string name="notifications">Notifications</string>
    <string name="Profile">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="have_not_sign_in">You haven\'t sign in yet</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="empty_description" />
    <string name="notification_setting_description">Turn on/off notifications</string>
    <string name="warning">Warning</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_again">Try again</string>
    <string name="session_expired">Your session has been expried</string>
    <string name="session_expired_description">Do you want to re-sign in?</string>
    <string name="hello">Hello, %1$s!</string>
    <string name="facility">Facility</string>
</resources>